--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,5 +1,5 @@
 <li><a href="/">Home</a></li>
-<div>
+<h1>Artist Search Results:</h1>
     {{#each items}}
         <h2>name: {{ name }}</h2>
             {{#each images}}
@@ -7,4 +7,3 @@
             {{/each}}
         <a href="/albums/{{id}}">View Artist Albums</a>
     {{/each}}
-</div>
