--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,5 +3,5 @@
   Search for an Artist
 </label>
 <input type="text" name="artist"/>
-<button type="submit">Search</button>
+<button type="submit">Search for an Artist</button>
 </form>
