solved withoust styles

--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,4 +1,4 @@
-<li><a href="/">Home</a></li>
+<a href="/">Home</a>
 <h1>Artist Search Results:</h1>
     {{#each items}}
         <h2>name: {{ name }}</h2>
