--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,4 +1,4 @@
-<li><a href="/">Home</a></li>
+<a href="/">Home</a>
     <h1>Artist albums:</h1>
     {{#each items}}
         <h2>name: {{ name }}</h2>
