--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,139 @@
-* {
-    background-color: aquamarine;
+*,
+*:before,
+*:after{
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
+/*home page*/
+
+#index-body {
+    background-image: url("/images/spotify-background.jpeg");
+    min-height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#index-form {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    margin: 21%;
+    opacity: 0.65;
+    padding: 25px;
+}
+
+#artist-bar {
+    width: 50%;
+    padding: 5px 5px;
+    border: 0px 0px;
+    margin: 50px 25px 25px 25px;
+}
+
+button {
+    background-color: rgb(243, 99, 99);
+    font-family:sans-serif;
+    font-weight:bolder;
+    color: white;
+    padding: 10px 15px;
+    opacity: 1;
+    border-radius: 5%;
+    margin-bottom: 30px;
+}
+
+.results {
+    display:flex;
+    flex-wrap: wrap;
+    text-align: center;
+    align-content: center;
+    justify-content:space-around;
+    padding: 0px 0px 0px 0px;
+    background-color: white;
+}
+
+.results > div {
+    margin:100px 100px 100px 100px;
+    width:192px;
+    height:270px;
+    background-color: #423E3D;
+    color:white;
+}
+
+.results > div > h4 {
+    margin:0px;
+    font-size: 1em;
+    width:192px;
+    padding-bottom: 5px;
+}
+
+.results > div > p {
+    margin:0px;
+    padding-bottom: 5px;
+}
+
+.results > div > a {
+    background-color: lightcoral;
+    color: white;
+    padding: 5px 10px;
+    opacity: 1;
+    border-radius: 10%;
+    text-decoration: none;
+    font-size: 0.65em;
+}
+
+#album-image {
+    width:192px;
+    height:192px;
+    border-color: black;
+}
+
+.song-list {
+    background-color: white;
+}
+
+header {
+    display:flex;
+    text-align: center;
+    justify-content: space-around;
+}
+
+ul {
+    margin:0px;
+    flex-direction: column;
+    display:flex;
+    text-align: center;
+    list-style: none;
+    justify-content: space-between;
+    padding: 0 40px;
+}
+
+li {
+    display:flex;
+    align-content:center;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #E5DFDD;
+    margin:5px;
+    height:80px;
+    font-size: 1em;
+    font-weight: 700;
+}
+
+header > p {
+    background-color: #423E3D;
+    color:darkgray;
+    font-weight: 700;
+    font-size: 2em;
+    margin:0px;
+    padding: 20px 30%;
+    text-align: left;
+}
+
+li > p {
+    padding-left: 20px;
 }
