--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
-<form action="/artist-search" method="GET">
-<input type="text" name="artist"/>
+<body id="index-body">
+  <form id="index-form" action="/artist-search" method="GET">
+<input id="artist-bar" type="text" name="artist"/>
 <button type="submit">Search for an Artist</button>
 </form>
+</body>
+
